# iniparser

./: INSTALL  Makefile.am  configure.ac  libiniparser.pc.in
doc/: Doxyfile.in  Makefile.am
src/: Makefile.am
test/: Makefile.am
